--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-.body {
+body {
   color:white;
   background-image:url("swords.jpg");
-  background-color:black;
+  background-color:white;
 }
 
 .game {
